# Python-ML

./: kaggle.json  main.py  pyproject.toml  readme.md  sklearn.ipynb  the-fantasy-zookeeper.ipynb
.devcontainer/: devcontainer.json
exercises/: matplotlib.ipynb  numpy.ipynb  pandas.ipynb  sklearn.ipynb  spaceshiptitanic-tutorial-beginner-80-accuracy.ipynb  the-alien-invasion.ipynb  the-fantasy-zookeeper.ipynb  the-great-iris-festival.ipynb  the-tic-tac-toe-referee.ipynb
