[tool.poetry]
name = "poetry-folder"
version = "0.1.0"
description = "my first poetry project"
authors = ["MartaQL <martaquinteroledesma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
